--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Alt-ergo documentation</title>
-    <meta http-equiv="refresh" content="0;URL=./next/">
+    <meta http-equiv="refresh" content="0;URL=./latest/">
   </head>
   <body>
   </body>
